Update .env and package.json, remove old files, add new index.js

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 JWT_SECRET=week6secretkey
 JWT_EXPIRES_IN=1h
 ADMIN_SECRET=MyPassWord1234!
+PORT=3000
+MONGO_URI=mongodb+srv://azwa:99kVpM6hWvWkQeKM@berr2243.1zefmmd.mongodb.net/MyTaxiDB?retryWrites=true&w=majority&appName=BERR2243
